fix: increase z-index

--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -105,7 +105,6 @@ html.popupIsOpen body::after {
 
     box-shadow: 0 4px 50px rgba(20, 20, 70, 0.08);
     border-radius: 16px;
-    z-index: 1;
 
     position: absolute;
     inset: 80px 8% 40px;
